tester/testsuite/extensions/objects1/bad/bad003.jl
/* class extends an undeclared class */

class Car extends Vehicle {
	void drive() {
	}
}

int main() {
    return 1;
}
